k8s/apps/external-secrets/onepassword/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name onepassword
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      volumes:
        - name: config
          emptyDir: {}
        - name: onepassword-connect-secret
          secret:
            secretName: onepassword-connect-secret
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        runAsNonRoot: true
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - &container
          name: onepassword-connect
          image: docker.io/1password/connect-api:1.8.2
          ports:
            - containerPort: 8080
              name: api
          resources: &resources
            requests:
              cpu: 10m
              memory: &memory 256Mi
            limits:
              memory: *memory
          volumeMounts: &mounts
            - mountPath: *configDir
              name: config
            - mountPath: *sessionPath
              name: onepassword-connect-secret
              subPath: onepassword-credentials.json
              readOnly: true
          securityContext: &securityContext
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: api
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: api
            initialDelaySeconds: 15
        - <<: *container
          name: onepassword-sync
          image: docker.io/1password/connect-sync:1.8.3
