k8s/apps/external-secrets/onepassword/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onepassword
spec:
  selector:
    app.kubernetes.io/name: onepassword
  ports:
    - port: 80
      name: http
      targetPort: api
